--- a/eks/deployment.yaml.1
+++ b/eks/deployment.yaml.1
@@ -1,27 +1,24 @@
-# 1. YAML: Deployment
-
-# Deployment
-# controllers/nginx-deploy.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: simple-bank-api-deployment
   labels:
-    app: nginx-app
+    app: simple-bank-api
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx-app
+      app: simple-bank-api
   template:
     metadata:
       labels:
-        app: nginx-app
+        app: simple-bank-api
     spec:
       containers:
-      - name: nginx-container
+      - name: simple-bank-api
         image: ghcr.io/sam3797/hello-world:master-${{ github.run_number }}
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80
+        - containerPort: 8080
       imagePullSecrets:
       - name: regcred
